# pyVoIP

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  NOTES  README.md  pyproject.toml  requirements-test.txt  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: black.yml  flake8.yml  pytest.yml  test.yml
docker/: Dockerfile  start.bat  start.ps1
docker/settings/: cert.crt  extensions.conf  pjsip.conf
docs/: Credentials.rst  Examples.rst  Globals.rst  Networking.rst  RTP.rst  SIP.rst  Types.rst  VoIP.rst  conf.py  index.rst
docs/source/: Examples.rst  RTP.rst  SIP.rst  conf.py
pyVoIP/: RTP.py  SIP.py  VoIP.py  __init__.py  credentials.py  helpers.py  regex.py  sock.py  types.py  util.py
pyVoIP/SIP/: __init__.py  client.py  error.py  message.py
pyVoIP/SIP/message/: message.py  parse.py  response_codes.py
pyVoIP/VoIP/: VoIP.py  __init__.py  call.py  error.py  phone.py  status.py
pyVoIP/networking/: nat.py  sock.py
pyVoIP/sock/: __init__.py  sock.py  transport.py
tests/: conftest.py  test_functionality.py  test_nat.py  test_sip.py  test_sip_requests.py  test_sip_responses.py  test_util.py
tests/certs/: key.txt
